--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <httpcomponents.version>5.1.2</httpcomponents.version>
         <guava.version>31.0.1-jre</guava.version>
 
-        <junit.version>5.7.2</junit.version>
+        <junit.version>5.8.2</junit.version>
         <mockito.version>4.1.0</mockito.version>
     </properties>
 
@@ -58,7 +58,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${maven.exec.plugin.version}</version>
                 <configuration>
-                    <mainClass>nuno.HttpFileServerMain</mainClass>
+                    <mainClass>com.nsantos.httpfileserver.HttpFileServerMain</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -86,7 +86,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>nuno.HttpFileServerMain</mainClass>
+                            <mainClass>com.nsantos.httpfileserver.HttpFileServerMain</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
