Perform graceful shutdown by calling close() in Socket and ServerSocket instances instead of raising an interrupt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,6 +1,8 @@
-
 com.nsantos.httpfileserver {
+  # Base path from where to server files
   base-path = ${java.io.tmpdir}
+  # Size of the thread pool used to server connections.
   thread-pool-size = 8
+  # Port where to listen for connections. Set to 0 to choose a random port.
   port = 8081
 }
