Improve support for Keep-alive: return Keep-alive header and timeout idle connections. Add documentation.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,4 +5,6 @@ com.nsantos.httpfileserver {
   thread-pool-size = 8
   # Port where to listen for connections. Set to 0 to choose a random port.
   port = 8081
+  # How long to allow a connection to be idle before closing it
+  keep-alive-timeout = 30 seconds
 }
